[gd_scene load_steps=26 format=2]

[ext_resource path="res://asset/matching/assets/fonts/Nunito-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scene/HitungGambar/HitungGambar.gd" type="Script" id=2]
[ext_resource path="res://WhatsApp Image 2021-07-08 at 15.24.53.jpeg" type="Texture" id=3]
[ext_resource path="res://scene/HitungGambar/HitungGambar.tres" type="DynamicFont" id=4]
[ext_resource path="res://scene/HitungGambar/Button2.gd" type="Script" id=5]
[ext_resource path="res://scene/HitungGambar/Button.gd" type="Script" id=6]
[ext_resource path="res://scene/HitungGambar/Button1.gd" type="Script" id=7]
[ext_resource path="res://scene/UI/change.tscn" type="PackedScene" id=8]
[ext_resource path="res://asset/button/quit.png" type="Texture" id=9]
[ext_resource path="res://asset/matching/assets/fonts/Nunito-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://asset/audio/permainan hitung gambar.wav" type="AudioStream" id=11]

[sub_resource type="Theme" id=1]
Panel/styles/panel = null

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=3]
Panel/styles/panel = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.552941, 0.72549, 0.87451, 0.694118 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.992157, 0.992157, 0.992157, 0 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color( 0, 0, 0, 0.301961 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="Theme" id=6]
Panel/styles/panel = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 2
outline_color = Color( 0.231373, 0.227451, 0.227451, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.658824, 0.964706, 0.792157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_color = Color( 0.580392, 0.498039, 0.498039, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="Theme" id=9]
Panel/styles/panel = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.839216, 0.788235, 0.635294, 0.717647 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="Theme" id=11]
Panel/styles/panel = SubResource( 10 )

[sub_resource type="Animation" id=12]
resource_name = "GameSelesai"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 100 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("GridContainer2/Panel/Button:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0862745 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GridContainer2/Panel2/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GridContainer2/Panel3/Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GridContainer/Panel/TextureButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GridContainer/Panel2/TextureButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GridContainer/Panel3/TextureButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GridContainer/Panel4/TextureButton:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GridContainer/Panel5/TextureButton:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("GridContainer/Panel6/TextureButton:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("GridContainer/Panel7/TextureButton:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("GridContainer/Panel8/TextureButton:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("GridContainer/Panel9/TextureButton:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "method"
tracks/12/path = NodePath(".")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable"
} ]
}

[sub_resource type="DynamicFont" id=14]
size = 1
outline_size = 5
outline_color = Color( 0.0509804, 0.0470588, 0.0470588, 1 )
font_data = ExtResource( 10 )

[node name="HitungGambar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 152.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 350
alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.972549, 0.937255, 0.937255, 1 )
margin_right = 140.0
margin_bottom = 74.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 790.0
margin_bottom = 74.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
theme = SubResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "0 : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.972549, 0.937255, 0.937255, 1 )
margin_left = 1140.0
margin_right = 1280.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 1280.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2"]
margin_left = 315.0
margin_right = 965.0
margin_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 650, 0 )
theme = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -40.0
margin_right = 640.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -184.0
margin_right = 677.0
margin_bottom = 296.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 279, 240 )
theme = SubResource( 9 )
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_right = 172.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 192.0
margin_right = 364.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 384.0
margin_right = 556.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_top = 166.0
margin_right = 172.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 192.0
margin_top = 166.0
margin_right = 364.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel5"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel6" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 384.0
margin_top = 166.0
margin_right = 556.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel6"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel7" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_top = 332.0
margin_right = 172.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel7"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel8" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 192.0
margin_top = 332.0
margin_right = 364.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel8"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel9" type="Panel" parent="GridContainer"]
self_modulate = Color( 1, 1, 1, 0.768627 )
margin_left = 384.0
margin_top = 332.0
margin_right = 556.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="GridContainer/Panel9"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -392.0
margin_top = 176.0
margin_right = -202.0
margin_bottom = -64.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 95, 240 )
theme = SubResource( 11 )
custom_constants/vseparation = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GridContainer2"]
margin_right = 190.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.886275, 0.886275, 0.886275, 1 )
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="GridContainer2"]
margin_top = 166.0
margin_right = 190.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer2/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.878431, 0.878431, 0.878431, 1 )
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="GridContainer2"]
margin_top = 332.0
margin_right = 190.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer2/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.992157, 0.996078, 0.996078, 1 )
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameSelesai = SubResource( 12 )
anims/appear = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]

[node name="chage" parent="." instance=ExtResource( 8 )]

[node name="TextureRect" parent="chage" index="0"]
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 14 )
text = "Game Selesai"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="sfx" type="AudioStreamPlayer" parent="."]

[node name="start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GridContainer2/Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GridContainer2/Panel2/Button" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="GridContainer2/Panel3/Button" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="start" to="." method="_on_start_finished"]

[editable path="chage"]
